link to program

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             Oct. 22—24
         </h2>
         <div class="popup">
-            <div class="popup__item">
-                <!-- <div>Program<br>now online!</div> -->
-                <div>Program<br>online soon!</div>
-            </div>
+            <a href="/program">
+                <div class="popup__item">
+                    <div>Program<br>online now!</div>
+                </div>
+            </a>
         </div>
         <article class="text" id="about">
             <p>
@@ -43,9 +44,9 @@
             a varied program of openings, screenings,
             talks, guided tours and performances.
             </p>
-            <!-- <div class="link">
+            <div class="link">
                 <a href="/program">Full program ⟶</a>
-            </div> -->
+            </div>
             <p>
             Independent Space Index is a self-organized,
             comprehensive index of local artist-run and independent
