--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             Oct. 22—24
         </h2>
         <div class="popup">
-            <a href="/program">
-                <div class="popup__item">
+            <a class="popup__item" href="/program">
+                <div>
                     <div>Program<br>online now!</div>
                 </div>
             </a>
