--- a/program.html
+++ b/program.html
@@ -10,7 +10,10 @@
     <script type="text/javascript" src="./assets/js/activearea.js"></script>
     <script type="text/javascript" src="./assets/js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="./assets/js/main.js"></script>
-    <title>Independent Space Index 2020</title>
+    <title>Program • Independent Space Index 2020</title>
+    <meta property="og:title" content="Program: Independent Space Index 2020" />
+    <meta property="og:url" content="https://2020.independentspaceindex.at/program" />
+    <meta property="og:image" content="assets/images/og.png" />
 </head>
 <body data-namespace="program" data-view="program">
     <canvas id="canvas" style="z-index: -1000"></canvas>
