cancelled message on banner

--- a/banner.html
+++ b/banner.html
@@ -40,9 +40,9 @@
     >
     <div class="marq">
         <a href="https://2020.independentspaceindex.at" target="_parent">
-            Independent Space Index 2020 ∕
+            CANCELLED: Independent Space Index 2020 ∕
             October 22—24 ∕ 
-            Independent Space Index 2020 ∕
+            CANCELLED: Independent Space Index 2020 ∕
             October 22—24 ∕ 
         </a>
     </div>
